--- a/index.html
+++ b/index.html
@@ -16,25 +16,31 @@
           </a>
           <ul class="header-list">
             <li class="header-item">
-              <a href="Home" class="header-item-link"></a>
+              <a href="" class="header-item-link">Home</a>
             </li>
             <li class="header-item">
-              <a href="How it’s made?" class="header-item-link"></a>
+              <a href="" class="header-item-link">How it’s made?</a>
             </li>
             <li class="header-item">
-              <a href="Chocolate is loved" class="header-item-link"></a>
+              <a href="" class="header-item-link">Chocolate is loved</a>
             </li>
           </ul>
         </nav>
         <ul class="header-nav">
           <li class="header-nav-item">
-            <a href=""><img src="" alt="" /></a>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              ><img src="./img/Vector.png" alt="instagram"
+            /></a>
           </li>
           <li class="header-nav-item">
-            <a href=""><img src="" alt="" /></a>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              ><img src="./img/Vector.png" alt="facebook"
+            /></a>
           </li>
           <li class="header-nav-item">
-            <a href=""><img src="" alt="" /></a>
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              ><img src="./img/Vector.png" alt="twitter"
+            /></a>
           </li>
         </ul>
       </section>
@@ -45,11 +51,12 @@
           Treat yourself or a loved one to our finest ingredients for a moment
           of pure delight!
         </h1>
-        <button type="button" class="hero-btn-buy">Buy now</button
-        ><button type="button" class="hero-btn-how">How it’s made</button>
-        <p class="hero-text">scroll down</p>
+        <button type="button" class="hero-btn-buy">Buy now</button>
+        <a href="#how-made" class="hero-link-how">How it’s made</a>
+        <a href="" class="hero-text">scroll down</a>
       </section>
       <section class="about">
+        <h2 hidden>Features</h2>
         <ul class="about-list">
           <li class="about-item">
             <h3 class="about-item-title">Unsurpassed taste</h3>
@@ -98,15 +105,29 @@
               src="./img/milk-chocolate.png"
               alt="MILK CHOCOLATE"
               class="taste-item-img"
+              width="214"
+              height="160"
             />
             <h3 class="taste-item-title">MILK CHOCOLATE</h3>
           </li>
           <li class="taste-item">
-            <img src="./img/milk.png" alt="MILK" class="taste-item-img" />
+            <img
+              src="./img/milk.png"
+              alt="MILK"
+              class="taste-item-img"
+              width="214"
+              height="160"
+            />
             <h3 class="taste-item-title">MILK</h3>
           </li>
           <li class="taste-item">
-            <img src="./img/nuts.png" alt="NUTS" class="taste-item-img" />
+            <img
+              src="./img/nuts.png"
+              alt="NUTS"
+              class="taste-item-img"
+              width="214"
+              height="160"
+            />
             <h3 class="taste-item-title">NUTS</h3>
           </li>
           <li class="taste-item">
@@ -114,11 +135,19 @@
               src="./img/sweet-chocolate.png"
               alt="SEMI - SWEET CHOCOLATE"
               class="taste-item-img"
+              width="214"
+              height="160"
             />
             <h3 class="taste-item-title">SEMI - SWEET CHOCOLATE</h3>
           </li>
           <li class="taste-item">
-            <img src="./img/cacao.png" alt="CACAO" class="taste-item-img" />
+            <img
+              src="./img/cacao.png"
+              alt="CACAO"
+              class="taste-item-img"
+              width="214"
+              height="160"
+            />
             <h3 class="taste-item-title">CACAO</h3>
           </li>
           <li class="taste-item">
@@ -126,6 +155,8 @@
               src="./img/raspberry.png"
               alt="RASPBERRY"
               class="taste-item-img"
+              width="214"
+              height="160"
             />
             <h3 class="taste-item-title">RASPBERRY</h3>
           </li>
@@ -134,17 +165,19 @@
               src="./img/cocnut-oil.png"
               alt="COCONUT OIL"
               class="taste-item-img"
+              width="214"
+              height="160"
             />
             <h3 class="taste-item-title">COCONUT OIL</h3>
           </li>
         </ul>
       </section>
-      <section class="how">
+      <section class="how" id="how-made">
         <h2 class="how-title">hOW IT’S <span class="how-made">made?</span></h2>
-        <p class="how-text">
+        <img src="./img/made.jpg" alt="milk" width="600" height="400" />
+        <h3 class="how-text">
           Try our chocolates today and discover the perfect balance of flavor
-        </p>
-        <img src="./img/made.jpg" alt="hOW IT’S made?" />
+        </h3>
         <ul class="how-list">
           <li class="how-item">
             <p class="how-item-text">
@@ -187,6 +220,8 @@
               src="./img/our-products1.jpg"
               alt="orange "
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">orange</h3>
             <p class="products-item-text">Dark chocolate</p>
@@ -197,6 +232,8 @@
               src="./img/our-products2.jpg"
               alt="APPLE&CRANBERRY"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">APPLE&CRANBERRY</h3>
             <p class="products-item-text">Milk chocolate</p>
@@ -207,6 +244,8 @@
               src="./img/our-products3.jpg"
               alt="lime&sea salt"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">lime&sea salt</h3>
             <p class="products-item-text">Dark chocolate</p>
@@ -217,6 +256,8 @@
               src="./img/our-products4.jpg"
               alt="pineapple"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">pineapple</h3>
             <p class="products-item-text">Dark chocolate</p>
@@ -227,6 +268,8 @@
               src="./img/our-products5.jpg"
               alt="Classic"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">Classic</h3>
             <p class="products-item-text">Milk chocolate</p>
@@ -237,6 +280,8 @@
               src="./img/our-products6.jpg"
               alt="honey"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">honey</h3>
             <p class="products-item-text">Milk chocolate</p>
@@ -247,6 +292,8 @@
               src="./img/our-products7.jpg"
               alt="Roasted fruits"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">Roasted fruits</h3>
             <p class="products-item-text">Dark chocolate</p>
@@ -257,6 +304,8 @@
               src="./img/our-products8.jpg"
               alt="Classic"
               class="products-item-img"
+              width="230"
+              height="201"
             />
             <h3 class="products-item-title">Classic</h3>
             <p class="products-item-text">White chocolate</p>
@@ -272,6 +321,8 @@
               src="./img/sellers1.jpg"
               alt="CHOCOLATE WITH NUTS"
               class="sellers-item-img"
+              width="368"
+              height="464"
             />
             <h3 class="sellers-item-title">CHOCOLATE WITH NUTS</h3>
           </li>
@@ -280,6 +331,8 @@
               src="./img/sellers2.jpg"
               alt="CHOCOLATE WITH FRUITS"
               class="sellers-item-img"
+              width="368"
+              height="464"
             />
             <h3 class="sellers-item-title">CHOCOLATE WITH FRUITS</h3>
           </li>
@@ -288,6 +341,8 @@
               src="./img/sellers3.jpg"
               alt="DARK CHOCOLATE"
               class="sellers-item-img"
+              width="368"
+              height="464"
             />
             <h3 class="sellers-item-title">DARK CHOCOLATE</h3>
           </li>
@@ -340,6 +395,64 @@
         <button type="button" class="loved-btn">Leave a review</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p><span>Chocolate</span> a delicious cure for a bad day</p>
+      <p>Social networks</p>
+      <ul class="header-nav">
+        <li class="header-nav-item">
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            ><img src="./img/Vector.png" alt="instagram"
+          /></a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            ><img src="./img/Vector.png" alt="facebook"
+          /></a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            ><img src="./img/Vector.png" alt="twitter"
+          /></a>
+        </li>
+      </ul>
+      <p>Contact us</p>
+      <address>
+        <ul class="contacts-footer">
+          <li class="contacts-footer-item">
+            <a
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
+          </li>
+          <li class="contacts-footer-item">
+            <a
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              href="mailto:simplychoc@gmail.com"
+              >simplychoc@gmail.com</a
+            >
+          </li>
+        </ul>
+      </address>
+      <nav>
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="" class="header-item-link">Home</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-item-link">How it’s made?</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-item-link">Chocolate is loved</a>
+          </li>
+        </ul>
+      </nav>
+      <label for="text">
+        <input type="text" placeholder="Enter your email" />
+      </label>
+      <button type="button">Subscribe</button>
+    </footer>
   </body>
 </html>
