--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Chocolate</title>
     <link rel="icon" href="./img/chocolate-icon-title.png" type="image/png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <section class="header">
-        <nav>
+        <nav class="header-navigation">
           <a href="" class="logo"
-            >SIMPLY CHOCOLATE
-            <img src="./img/chocolate-icon-title.png" alt="logo" />
+            ><span>SIMPLY</span> CHOCOLATE
+            <img
+              src="./img/chocolate-icon-title.png"
+              alt="logo"
+              width="24"
+              height="24"
+            />
           </a>
           <ul class="header-list">
             <li class="header-item">
@@ -56,7 +72,7 @@
         <a href="" class="hero-text">scroll down</a>
       </section>
       <section class="about">
-        <h2 hidden>Features</h2>
+        <h2>Features</h2>
         <ul class="about-list">
           <li class="about-item">
             <h3 class="about-item-title">Unsurpassed taste</h3>
@@ -173,7 +189,7 @@
         </ul>
       </section>
       <section class="how" id="how-made">
-        <h2 class="how-title">hOW IT’S <span class="how-made">made?</span></h2>
+        <h2 class="how-title">hOW IT’S <span class="tst">made?</span></h2>
         <img src="./img/made.jpg" alt="milk" width="600" height="400" />
         <h3 class="how-text">
           Try our chocolates today and discover the perfect balance of flavor
@@ -211,9 +227,7 @@
         </ul>
       </section>
       <section class="our-products">
-        <h2 class="products-title">
-          Our <span class="products">pRODUCTS</span>
-        </h2>
+        <h2 class="products-title">Our <span class="tst">pRODUCTS</span></h2>
         <ul class="products-list">
           <li class="products-item">
             <img
@@ -314,7 +328,7 @@
         </ul>
       </section>
       <section class="top-sellers">
-        <h2 class="sellers-title"><span class="top">tOp</span> Sellers</h2>
+        <h2 class="sellers-title"><span class="tst">tOp</span> Sellers</h2>
         <ul class="sellers-list">
           <li class="sellers-item-img">
             <img
@@ -396,30 +410,45 @@
       </section>
     </main>
     <footer>
-      <p><span>Chocolate</span> a delicious cure for a bad day</p>
-      <p>Social networks</p>
+      <p class="footer-title">
+        <span class="tst">Chocolate</span> a delicious cure for a bad day
+      </p>
+      <p class="contacts-footer-title">Social networks</p>
       <ul class="header-nav">
         <li class="header-nav-item">
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <a
+            class="footer-soc-icon"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer nofollow"
             ><img src="./img/Vector.png" alt="instagram"
           /></a>
         </li>
         <li class="header-nav-item">
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <a
+            class="footer-soc-icon"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer nofollow"
             ><img src="./img/Vector.png" alt="facebook"
           /></a>
         </li>
         <li class="header-nav-item">
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <a
+            class="footer-soc-icon"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer nofollow"
             ><img src="./img/Vector.png" alt="twitter"
           /></a>
         </li>
       </ul>
-      <p>Contact us</p>
+      <p class="contacts-footer-title">Contact us</p>
       <address>
         <ul class="contacts-footer">
           <li class="contacts-footer-item">
             <a
+              class="contacts-footer-link"
               target="_blank"
               rel="noopener noreferrer nofollow"
               href="tel:+380684439426"
@@ -428,6 +457,7 @@
           </li>
           <li class="contacts-footer-item">
             <a
+              class="contacts-footer-link"
               target="_blank"
               rel="noopener noreferrer nofollow"
               href="mailto:simplychoc@gmail.com"
@@ -439,13 +469,17 @@
       <nav>
         <ul class="header-list">
           <li class="header-item">
-            <a href="" class="header-item-link">Home</a>
+            <a href="" class="header-item-link footer-item-link">Home</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-item-link">How it’s made?</a>
+            <a href="" class="header-item-link footer-item-link"
+              >How it’s made?</a
+            >
           </li>
           <li class="header-item">
-            <a href="" class="header-item-link">Chocolate is loved</a>
+            <a href="" class="header-item-link footer-item-link"
+              >Chocolate is loved</a
+            >
           </li>
         </ul>
       </nav>
