--- a/index.html
+++ b/index.html
@@ -45,19 +45,37 @@
           </nav>
           <ul class="header-nav">
             <li class="header-nav-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow"
-                ><img src="./img/Vector.png" alt="instagram"
-              /></a>
+              <a
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="header-contact-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="header-nav-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow"
-                ><img src="./img/Vector.png" alt="facebook"
-              /></a>
+              <a
+                href="https://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="header-contact-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="header-nav-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow"
-                ><img src="./img/Vector.png" alt="twitter"
-              /></a>
+              <a
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="header-contact-icon" width="24" height="24">
+                  <use href="./img/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -347,34 +365,58 @@
         <div class="container">
           <h2 class="sellers-title"><span class="tst">tOp</span> Sellers</h2>
           <ul class="sellers-list">
-            <li class="sellers-item-img">
-              <img
-                src="./img/sellers1.jpg"
-                alt="CHOCOLATE WITH NUTS"
-                class="sellers-item-img"
-                width="368"
-                height="464"
-              />
+            <li class="sellers-item">
+              <div class="sellers-cover-wrap">
+                <img
+                  src="./img/sellers1.jpg"
+                  alt="CHOCOLATE WITH NUTS"
+                  class="sellers-item-img"
+                  width="368"
+                  height="464"
+                />
+                <p class="sellers-item-text">
+                  Chocolate with fruit is an unbeatable combination of two of
+                  the tastiest things in the world. This dessert combines
+                  delicate and aromatic chocolate with fresh and juicy fruits,
+                  creating a true poetry of taste.
+                </p>
+              </div>
               <h3 class="sellers-item-title">CHOCOLATE WITH NUTS</h3>
             </li>
-            <li class="sellers-item-img">
-              <img
-                src="./img/sellers2.jpg"
-                alt="CHOCOLATE WITH FRUITS"
-                class="sellers-item-img"
-                width="368"
-                height="464"
-              />
+            <li class="sellers-item">
+              <div class="sellers-cover-wrap">
+                <img
+                  src="./img/sellers2.jpg"
+                  alt="CHOCOLATE WITH FRUITS"
+                  class="sellers-item-img"
+                  width="368"
+                  height="464"
+                />
+                <p class="sellers-item-text">
+                  Chocolate with fruit is an unbeatable combination of two of
+                  the tastiest things in the world. This dessert combines
+                  delicate and aromatic chocolate with fresh and juicy fruits,
+                  creating a true poetry of taste.
+                </p>
+              </div>
               <h3 class="sellers-item-title">CHOCOLATE WITH FRUITS</h3>
             </li>
-            <li class="sellers-item-img">
-              <img
-                src="./img/sellers3.jpg"
-                alt="DARK CHOCOLATE"
-                class="sellers-item-img"
-                width="368"
-                height="464"
-              />
+            <li class="sellers-item">
+              <div class="sellers-cover-wrap">
+                <img
+                  src="./img/sellers3.jpg"
+                  alt="DARK CHOCOLATE"
+                  class="sellers-item-img"
+                  width="368"
+                  height="464"
+                />
+                <p class="sellers-item-text">
+                  Chocolate with fruit is an unbeatable combination of two of
+                  the tastiest things in the world. This dessert combines
+                  delicate and aromatic chocolate with fresh and juicy fruits,
+                  creating a true poetry of taste.
+                </p>
+              </div>
               <h3 class="sellers-item-title">DARK CHOCOLATE</h3>
             </li>
           </ul>
