--- a/index.html
+++ b/index.html
@@ -221,41 +221,47 @@
       <section class="how" id="how-made">
         <div class="container">
           <h2 class="how-title">hOW IT’S <span class="tst">made?</span></h2>
-          <img src="./img/made.jpg" alt="milk" width="600" height="400" />
-          <h3 class="how-text">
-            Try our chocolates today and discover the perfect balance of flavor
-          </h3>
-          <ul class="how-list">
-            <li class="how-item">
-              <p class="how-item-text">
-                Heat the milk in a saucepan without bringing it to a boil. Add
-                sugar and cocoa powder.
-              </p>
-            </li>
-            <li class="how-item">
-              <p class="how-item-text">
-                At the same time, prepare a water bath. Melt the butter on it.
-              </p>
-            </li>
-            <li class="how-item">
-              <p class="how-item-text">
-                "Mix" the milk mixture and already liquid butter. Mix thoroughly
-                with a silicone spatula so that the mass becomes uniform and
-                silky.
-              </p>
-            </li>
-            <li class="how-item">
-              <p class="how-item-text">
-                Heat the mixture over low heat, letting it barely boil.
-              </p>
-            </li>
-            <li class="how-item">
-              <p class="how-item-text">
-                Pour the chocolate into special containers (can be replaced with
-                ice molds). Allow to cool and harden.
-              </p>
-            </li>
-          </ul>
+          <div class="made-wrap">
+            <img src="./img/made.jpg" alt="milk" width="600" height="400" />
+            <div class="made-content">
+              <h3 class="how-text">
+                Try our chocolates today and discover the perfect balance of
+                flavor
+              </h3>
+              <ul class="how-list">
+                <li class="how-item">
+                  <p class="how-item-text">
+                    Heat the milk in a saucepan without bringing it to a boil.
+                    Add sugar and cocoa powder.
+                  </p>
+                </li>
+                <li class="how-item">
+                  <p class="how-item-text">
+                    At the same time, prepare a water bath. Melt the butter on
+                    it.
+                  </p>
+                </li>
+                <li class="how-item">
+                  <p class="how-item-text">
+                    "Mix" the milk mixture and already liquid butter. Mix
+                    thoroughly with a silicone spatula so that the mass becomes
+                    uniform and silky.
+                  </p>
+                </li>
+                <li class="how-item">
+                  <p class="how-item-text">
+                    Heat the mixture over low heat, letting it barely boil.
+                  </p>
+                </li>
+                <li class="how-item">
+                  <p class="how-item-text">
+                    Pour the chocolate into special containers (can be replaced
+                    with ice molds). Allow to cool and harden.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="our-products">
@@ -375,10 +381,11 @@
                   height="464"
                 />
                 <p class="sellers-item-text">
-                  Chocolate with fruit is an unbeatable combination of two of
-                  the tastiest things in the world. This dessert combines
-                  delicate and aromatic chocolate with fresh and juicy fruits,
-                  creating a true poetry of taste.
+                  Chocolate with nuts is a delectable combination that brings
+                  together the smoothness of chocolate and the crunchiness of
+                  nuts. Whether it's milk chocolate, dark chocolate, or white
+                  chocolate, the addition of nuts adds a whole new dimension of
+                  flavor and texture.
                 </p>
               </div>
               <h3 class="sellers-item-title">CHOCOLATE WITH NUTS</h3>
@@ -411,10 +418,11 @@
                   height="464"
                 />
                 <p class="sellers-item-text">
-                  Chocolate with fruit is an unbeatable combination of two of
-                  the tastiest things in the world. This dessert combines
-                  delicate and aromatic chocolate with fresh and juicy fruits,
-                  creating a true poetry of taste.
+                  Dark chocolate is a rich and indulgent treat that is beloved
+                  by many chocolate enthusiasts. It is made from cocoa beans,
+                  which are roasted, ground, and then processed to produce
+                  chocolate liquor. Dark chocolate contains a higher percentage
+                  of cocoa solids compared to milk chocolate.
                 </p>
               </div>
               <h3 class="sellers-item-title">DARK CHOCOLATE</h3>
@@ -473,84 +481,206 @@
     </main>
     <footer>
       <div class="container">
-        <p class="footer-title">
-          <span class="tst">Chocolate</span> a delicious cure for a bad day
-        </p>
-        <p class="contacts-footer-title">Social networks</p>
-        <ul class="header-nav">
-          <li class="header-nav-item">
-            <a
-              class="footer-soc-icon"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              ><img src="./img/Vector.png" alt="instagram"
-            /></a>
-          </li>
-          <li class="header-nav-item">
-            <a
-              class="footer-soc-icon"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              ><img src="./img/Vector.png" alt="facebook"
-            /></a>
-          </li>
-          <li class="header-nav-item">
-            <a
-              class="footer-soc-icon"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              ><img src="./img/Vector.png" alt="twitter"
-            /></a>
-          </li>
-        </ul>
-        <p class="contacts-footer-title">Contact us</p>
-        <address>
-          <ul class="contacts-footer">
-            <li class="contacts-footer-item">
-              <a
-                class="contacts-footer-link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                href="tel:+380684439426"
-                >+380 (68) 443-94-26</a
-              >
-            </li>
-            <li class="contacts-footer-item">
-              <a
-                class="contacts-footer-link"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                href="mailto:simplychoc@gmail.com"
-                >simplychoc@gmail.com</a
-              >
-            </li>
-          </ul>
-        </address>
-        <nav>
-          <ul class="header-list">
-            <li class="header-item">
-              <a href="" class="header-item-link footer-item-link">Home</a>
-            </li>
-            <li class="header-item">
-              <a href="" class="header-item-link footer-item-link"
-                >How it’s made?</a
-              >
-            </li>
-            <li class="header-item">
-              <a href="" class="header-item-link footer-item-link"
-                >Chocolate is loved</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <label for="text">
-          <input type="text" placeholder="Enter your email" />
-        </label>
-        <button type="button">Subscribe</button>
+        <div class="footer-top">
+          <p class="footer-title">
+            <span class="tst">Chocolate</span> a delicious cure for a bad day
+          </p>
+          <div class="footer-soc">
+            <p class="contacts-footer-title">Social networks</p>
+            <ul class="header-nav">
+              <li class="header-nav-item">
+                <a
+                  class="footer-soc-icon"
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header-nav-item">
+                <a
+                  class="footer-soc-icon"
+                  href="https://facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header-nav-item">
+                <a
+                  class="footer-soc-icon"
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-contact-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-contacts">
+            <p class="contacts-footer-title">Contact us</p>
+            <address>
+              <ul class="contacts-footer">
+                <li class="contacts-footer-item">
+                  <a
+                    class="contacts-footer-link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    href="tel:+380684439426"
+                    >+380 (68) 443-94-26</a
+                  >
+                </li>
+                <li class="contacts-footer-item">
+                  <a
+                    class="contacts-footer-link"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    href="mailto:simplychoc@gmail.com"
+                    >simplychoc@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <nav>
+            <ul class="header-list">
+              <li class="header-item">
+                <a href="" class="header-item-link footer-item-link">Home</a>
+              </li>
+              <li class="header-item">
+                <a href="" class="header-item-link footer-item-link"
+                  >How it’s made?</a
+                >
+              </li>
+              <li class="header-item">
+                <a href="" class="header-item-link footer-item-link"
+                  >Chocolate is loved</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <form class="footer-form">
+            <label for="text">
+              <input
+                type="email"
+                name="footer-email"
+                class="footer-input"
+                placeholder="Enter your email"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class="modal-close">X</button>
+        <p class="modal-title">
+          LEAVE A REVIEW ABOUT <span>OUR CHOCOLATE</span>
+        </p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label class="modal-label" data-required="true" for="user-name"
+              >Name</label
+            >
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                id="user-name"
+                placeholder="Enter your name"
+                required
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" data-required="true" for="user-email"
+              >Email</label
+            >
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input"
+                id="user-email"
+                placeholder="Enter your email"
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" data-required="true" for="user-tel"
+              >Phone number</label
+            >
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                name="user-tel"
+                class="modal-input"
+                id="user-tel"
+                placeholder="Enter your phone number"
+                required
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./img/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" data-required="true" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="modal-input modal-text"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Enter text"
+              required
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              class="modal-check visually-hidden"
+              type="checkbox"
+              name="privacy"
+              id="privacy"
+            />
+            <label class="modal-label check-text" for="privacy">
+              <span>
+                <svg class="modal-check-icon" width="10" height="10">
+                  <use href="./img/icons.svg#icon-icon"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a href="" class="modal-link">Privacy Policy</a></label
+            >
+          </div>
+          <button class="modal-submit" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <div class="checkbox">
+      <input
+        class="theme-checkbox-input visually-hidden"
+        type="checkbox"
+        name="theme"
+        id="theme"
+      />
+      <label for="theme" class="checkbox-theme"></label>
+    </div>
   </body>
 </html>
