adapt about+made

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <section class="header">
         <div class="container header-wrap">
           <nav class="header-navigation">
@@ -80,9 +80,9 @@
           </ul>
         </div>
       </section>
-    </header>
+    </header> -->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <div class="hero-wrap">
             <h1 class="hero-title">
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="about">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
@@ -218,7 +218,7 @@
           </ul>
         </div>
       </section>
-      <section class="how" id="how-made">
+      <!-- <section class="how" id="how-made">
         <div class="container">
           <h2 class="how-title">hOW IT’S <span class="tst">made?</span></h2>
           <div class="made-wrap">
@@ -263,8 +263,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="our-products">
+      </section> -->
+      <!-- <section class="our-products">
         <div class="container">
           <h2 class="products-title">Our <span class="tst">pRODUCTS</span></h2>
           <ul class="products-list">
@@ -366,8 +366,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="top-sellers">
+      </section> -->
+      <!-- <section class="top-sellers">
         <div class="container">
           <h2 class="sellers-title"><span class="tst">tOp</span> Sellers</h2>
           <ul class="sellers-list">
@@ -429,8 +429,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="loved">
+      </section> -->
+      <!-- <section class="loved">
         <div class="container">
           <h2 class="loved-title">
             <span class="chocolate">chocolate</span> is loved
@@ -477,9 +477,9 @@
           </ul>
           <button type="button" class="loved-btn">Leave a review</button>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <div class="footer-top">
           <p class="footer-title">
@@ -580,7 +580,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">X</button>
@@ -673,7 +673,7 @@
         </form>
       </div>
     </div>
-    <div class="checkbox">
+    <!-- <div class="checkbox">
       <input
         class="theme-checkbox-input visually-hidden"
         type="checkbox"
@@ -681,6 +681,6 @@
         id="theme"
       />
       <label for="theme" class="checkbox-theme"></label>
-    </div>
+    </div> -->
   </body>
 </html>
