--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <use href="./img/icons.svg#icon-menu"></use>
             </svg>
           </button>
-          <div class="mob-menu is-open">
+          <div class="mob-menu">
             <div class="mob-menu-wrap">
               <button class="mob-menu-close" type="button">X</button>
               <nav class="mob-menu-nav">
@@ -488,7 +488,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="top-sellers">
+      <section class="top-sellers">
         <div class="container">
           <h2 class="sellers-title"><span class="tst">tOp</span> Sellers</h2>
           <ul class="sellers-list">
@@ -550,7 +550,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="loved">
         <div class="container">
           <h2 class="loved-title">
