--- a/index.html
+++ b/index.html
@@ -551,31 +551,35 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="loved">
+      <section class="loved">
         <div class="container">
           <h2 class="loved-title">
-            <span class="chocolate">chocolate</span> is loved
+            <span class="tst">chocolate</span> is loved
           </h2>
           <ul class="loved-list">
             <li class="loved-item">
-              <img
-                src="./img/victoria.jpg"
-                alt="Victoria Dobrzhanska"
-                class="loved-item-img"
-              />
-              <h3 class="loved-item-title">Victoria Dobrzhanska</h3>
+              <div class="loved-item-wrap">
+                <img
+                  src="./img/victoria.jpg"
+                  alt="Victoria Dobrzhanska"
+                  class="loved-item-img"
+                />
+                <h3 class="loved-item-title">Victoria Dobrzhanska</h3>
+              </div>
               <p class="loved-item-text">
                 I love this chocolate bar. Perfect combination of light crispy
                 wafer, covered in a thin layer chocolate.
               </p>
             </li>
             <li class="loved-item">
-              <img
-                src="./img/nazar.jpg"
-                alt="Nazar Babenko"
-                class="loved-item-img"
-              />
-              <h3 class="loved-item-title">Nazar Babenko</h3>
+              <div class="loved-item-wrap">
+                <img
+                  src="./img/nazar.jpg"
+                  alt="Nazar Babenko"
+                  class="loved-item-img"
+                />
+                <h3 class="loved-item-title">Nazar Babenko</h3>
+              </div>
               <p class="loved-item-text">
                 This chocolate confection is a delight! A delight! The wafer is
                 light and crisp, the hazelnut cream is smooth, and the chocolate
@@ -583,12 +587,14 @@
               </p>
             </li>
             <li class="loved-item">
-              <img
-                src="./img/olena.jpg"
-                alt="Olena Kampusch"
-                class="loved-item-img"
-              />
-              <h3 class="loved-item-title">Olena Kampusch</h3>
+              <div class="loved-item-wrap">
+                <img
+                  src="./img/olena.jpg"
+                  alt="Olena Kampusch"
+                  class="loved-item-img"
+                />
+                <h3 class="loved-item-title">Olena Kampusch</h3>
+              </div>
               <p class="loved-item-text">
                 Chocolate is a family favourite treat. Love the delicious smooth
                 chocolate and the creaminess inside. The wafer is soft but
@@ -598,7 +604,7 @@
           </ul>
           <button type="button" class="loved-btn">Leave a review</button>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer>
       <div class="container">
