adapt footer mob

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer>
+    <footer>
       <div class="container">
         <div class="footer-top">
           <p class="footer-title">
@@ -614,7 +614,7 @@
           </p>
           <div class="footer-soc">
             <p class="contacts-footer-title">Social networks</p>
-            <ul class="header-nav">
+            <ul class="header-nav footer-nav">
               <li class="header-nav-item">
                 <a
                   class="footer-soc-icon"
@@ -678,16 +678,26 @@
         </div>
         <div class="footer-bottom">
           <nav>
-            <ul class="header-list">
-              <li class="header-item">
+            <ul class="header-list footer-bottom-list">
+              <li class="header-item footer-item">
                 <a href="" class="header-item-link footer-item-link">Home</a>
               </li>
-              <li class="header-item">
+              <li class="header-item footer-item">
                 <a href="" class="header-item-link footer-item-link"
                   >How it’s made?</a
                 >
               </li>
-              <li class="header-item">
+              <li class="header-item footer-item">
+                <a href="" class="header-item-link footer-item-link"
+                  >Our products</a
+                >
+              </li>
+              <li class="header-item footer-item">
+                <a href="" class="header-item-link footer-item-link"
+                  >Top sellers</a
+                >
+              </li>
+              <li class="header-item footer-item">
                 <a href="" class="header-item-link footer-item-link"
                   >Chocolate is loved</a
                 >
@@ -707,7 +717,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">X</button>
