--- a/index.html
+++ b/index.html
@@ -720,7 +720,11 @@
     </footer>
     <div class="backdrop">
       <div class="modal">
-        <button type="button" class="modal-close">X</button>
+        <button type="button" class="modal-close">
+          <svg class="modal-close-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-x-close"></use>
+          </svg>
+        </button>
         <p class="modal-title">
           LEAVE A REVIEW ABOUT <span>OUR CHOCOLATE</span>
         </p>
@@ -803,8 +807,8 @@
                   <use href="./img/icons.svg#icon-icon"></use>
                 </svg> </span
               >I accept the terms and conditions of the
-              <a href="" class="modal-link">Privacy Policy</a></label
-            >
+              <a href="" class="modal-link">Privacy Policy</a>
+            </label>
           </div>
           <button class="modal-submit" type="submit">Send</button>
         </form>
