--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
               </li>
             </ul>
           </nav>
+          <!-- <div class="checkbox">
+            <input
+              class="theme-checkbox-input visually-hidden"
+              type="checkbox"
+              name="theme"
+              id="theme-toggle"
+            />
+            <label for="theme-toggle" class="theme-switch">Dark theme</label>
+          </div> -->
           <ul class="header-nav">
             <li class="header-nav-item">
               <a
@@ -969,15 +978,6 @@
         </form>
       </div>
     </div>
-    <!-- <div class="checkbox">
-      <input
-        class="theme-checkbox-input visually-hidden"
-        type="checkbox"
-        name="theme"
-        id="theme"
-      />
-      <label for="theme" class="checkbox-theme"></label>
-    </div> -->
     <script src="./main.js" defer></script>
   </body>
 </html>
