--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
               </li>
             </ul>
           </nav>
-          <!-- <div class="checkbox">
-            <input
-              class="theme-checkbox-input visually-hidden"
-              type="checkbox"
-              name="theme"
-              id="theme-toggle"
-            />
-            <label for="theme-toggle" class="theme-switch">Dark theme</label>
-          </div> -->
+          <div class="checkbox">
+            <label class="switch">
+              <input type="checkbox" id="theme-toggle" />
+              <span class="slider"></span>
+            </label>
+            <p>Dark theme</p>
+          </div>
           <ul class="header-nav">
             <li class="header-nav-item">
               <a
@@ -116,6 +114,13 @@
                 </ul>
               </nav>
             </div>
+            <!-- <div class="checkbox-mob">
+              <label class="switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+              <p>Dark theme</p>
+            </div> -->
             <ul class="mob-nav">
               <li class="mob-nav-item">
                 <a
@@ -223,7 +228,7 @@
       </section>
       <section class="taste" id="taste">
         <div class="container">
-          <h2 class="taste-title">
+          <h2 class="taste-title title">
             IT ALL ADDS UP TO ONE EXCEPTIONAL
             <span class="tst">TASTE</span> SENSATION
           </h2>
@@ -481,7 +486,9 @@
       </section>
       <section class="how" id="how-made">
         <div class="container">
-          <h2 class="how-title">hOW IT’S <span class="tst">made?</span></h2>
+          <h2 class="how-title title">
+            hOW IT’S <span class="tst">made?</span>
+          </h2>
           <div class="made-wrap">
             <picture>
               <source
@@ -547,7 +554,9 @@
       </section>
       <section class="our-products">
         <div class="container">
-          <h2 class="products-title">Our <span class="tst">pRODUCTS</span></h2>
+          <h2 class="products-title title">
+            Our <span class="tst">pRODUCTS</span>
+          </h2>
           <div>
             <ul class="products-list">
               <li class="products-item">
