modal close upd

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           </div>
         </div>
       </section>
-      <section class="our-products">
+      <section class="our-products" id="products">
         <div class="container">
           <h2 class="products-title title">
             Our <span class="tst">pRODUCTS</span>
